# gov-fetch

./: .cursorrules  .env.example  .gitignore  Dockerfile  LICENSE  README.md  detect-gpu.sh  docker-compose.yml  gov-fetch.service  install.sh  mail.py  ollama_docker.sh  paragraph_chunk.py  polling_agent.py  preprocessor.py  pyproject.toml  repo_planning.md  requirements.txt  scrape.py  table_format.py
scripts/: install.sh  uninstall.sh
src/fetch/: config_loader.py  controller.py  custom_types.py  mail.py  main.py  preprocessor.py  rag.py  scrape.py
test/data/: visa_bulletin.md  visa_bulletin_formatted.md
